# pg2mermaid

./: README.md  pyproject.toml
.github/workflows/: ci.yml
pg2mermaid/: __init__.py  __main__.py  cli.py  exporter.py  models.py  parser.py  renderer.py
tests/: __init__.py  test_cli.py  test_exporter.py  test_parser.py  test_renderer.py
tests/fixtures/: example1_simple_blog.sql  example2_ecommerce.sql  example3_minimal.sql  simple.sql
