[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pg2mermaid"
version = "0.1.0"
description = "Convert PostgreSQL dump files to Mermaid ER diagrams"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["postgresql", "mermaid", "erd", "diagram", "database", "schema"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Documentation",
    "Typing :: Typed",
]

[project.scripts]
pg2mermaid = "pg2mermaid.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
